@@ -284,7 +284,7 @@ public class PagesView extends Composite implements MouseListener,PaintListener{
 					.drawLine(zeroX, tmp - pH + zeroY, xmax + zeroX, tmp - pH
 							+ zeroY);
 			tmp = tmp - pH;
-			yy.add(new Integer(tmp));
+			yy.add(Integer.valueOf(tmp));
 		}
 
 		tmp = xmax;
@@ -294,7 +294,7 @@ public class PagesView extends Composite implements MouseListener,PaintListener{
 					.drawLine(tmp - pW + zeroX, zeroY, tmp - pW + zeroX, ymax
 							+ zeroY);
 			tmp = tmp - pW;
-			xx.add(new Integer(tmp));
+			xx.add(Integer.valueOf(tmp));
 		}
 
 		List<Rectangle> rec = new ArrayList<Rectangle>();
